# yagiws

./: .gitattributes  .gitignore  Changelog  Makefile.am  artifact.c  bannerdata.c  character.c  configure.ac  gacha.c  gacha.h  git-version-gen  item.c  item.h  util.c  util.h  weapon.c
gnulib/: Makefile.am
include/: gacha.h  item.h  util.h
m4/: gnulib-cache.m4  gnulib-comp.m4
po/: Makevars  POTFILES.in
src/: Makefile.am  artifact.c  bannerdata.c  character.c  gacha.c  item.c  lightcone.c  util.c  weapon.c  yagiws.c  yasrws.c
