# SPDX-License-Identifier: MPL-2.0
# This file is part of Yet Another Star Rail Warp Simulator
# ©2024 Alex Pensinger (ArcticLuma113)
# Released under the terms of the MPLv2, which can be viewed at https://mozilla.org/MPL/2.0/

AM_CPPFLAGS = -I$(top_srcdir)/include
bin_PROGRAMS = yasrws
yasrws_SOURCES = yasrws.c bannerdata.c gacha.c item.c character.c lightcone.c util.c
