# SPDX-License-Identifier: MPL-2.0
# This file is part of Yet Another Genshin Impact Wish Simulator
# ©2024 Alex Pensinger (ArcticLuma113)
# Released under the terms of the MPLv2, which can be viewed at https://mozilla.org/MPL/2.0/

AM_CPPFLAGS = -I$(top_srcdir)/include -DLOCALEDIR=\"$(datadir)/locale\"
bin_PROGRAMS = yagiws
yagiws_SOURCES = yagiws.c bannerdata.c gacha.c item.c character.c weapon.c artifact.c util.c
